<resources>
    <string name="app_name">Powers</string>
    <string name="defaltScore">0</string>
    <string name="email">Email</string>
    <string name="emailExample">example@email.de</string>
    <string name="password">Password</string>
    <string name="passwordExample">password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="nameExample">username</string>
    <string name="logout">Logout</string>
    <string name="start">Start</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="newGame">New Game</string>
    <string name="menu">Menu</string>
    <string name="scores">Scores</string>
    <string name="hello">Hello</string>
</resources>
